--- a/overlay/packages/services/Telephony/res/values/config.xml
+++ b/overlay/packages/services/Telephony/res/values/config.xml
@@ -37,4 +37,7 @@
 
     <!-- This device can connect to 5G network in DSDS mode. -->
     <bool name="config_5g_connection_in_dsds_mode">true</bool>
+
+    <!-- The package name for the platform carrier config app, bundled with system image. -->
+    <string name="platform_carrier_config_package" translatable="false">com.google.android.carrier</string>
 </resources>
